added some SEO features

--- a/public/index.html
+++ b/public/index.html
@@ -1,16 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Saman Rashidi</title>
+    <title>Saman Rashidi ~ Senior Front-end developer</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <meta name="author" content="Saman Rashidi" />
 		<meta name="theme-color" content="#0a9abd" />
     <meta name="samandehi" content="641824005"/>
-    <meta property="og:locale" content="en_GB" />
+    <meta property="og:locale" content="en_gb" />
 		<meta property="og:type" content="website" />
 		<meta property="og:site_name" content="Saman Rashidi" />
-		<meta property="og:image" content="http://www.samanrashidi.com/img/saman_rashidi.48968b0c.png" />
+    <meta property="og:image" content="http://www.samanrashidi.com/samanrashidi-banner.jpg" />
+    <meta property="twitter:image" content="http://www.samanrashidi.com/samanrashidi.png">
+    <meta property="twitter:card" content="summary_large_image">
+
 		<link rel="alternate" href="http://www.samanrashidi.com/" hreflang="en-gb" />
     <link rel="icon" type="image/png" href="<%= BASE_URL %>favicon.png" />
     <link rel="manifest" href="manifest.webmanifest" />
@@ -34,7 +37,7 @@
   </head>
   <body itemscope itemtype="http://www.schema.org/Person">
     <noscript>
-      <strong>We're sorry but vue doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
+      <strong>We're sorry but Samanrashidi.com doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
     <div id="wrapper">
       <div id="app"></div>
@@ -47,7 +50,7 @@
       "@type": "WebSite",
       "url": "http://www.samanrashidi.com/",
       "name": "Saman Rashidi",
-      "description": "Saman Rashidi is a senior Front-end developer"
+      "description": "My name is Saman and I specialize in Front-end web development."
     }
   </script>
   <script>
