added hotjar to the page

--- a/public/index.html
+++ b/public/index.html
@@ -38,7 +38,19 @@
     	================================================== -->
 		<script src="/js/jquery.min.js"></script>
 		<script src="/js/saman.js"></script>
-		<script src="/js/website.js"></script>
+    <script src="/js/website.js"></script>
+    
+    <!-- Hotjar Tracking Code for http://www.samanrashidi.com -->
+    <script>
+      (function(h,o,t,j,a,r){
+          h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
+          h._hjSettings={hjid:1657046,hjsv:6};
+          a=o.getElementsByTagName('head')[0];
+          r=o.createElement('script');r.async=1;
+          r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
+          a.appendChild(r);
+      })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
+    </script>
     
   </head>
   <body itemscope itemtype="http://www.schema.org/Person">
