added lottie-player for animated icons

--- a/public/index.html
+++ b/public/index.html
@@ -39,6 +39,7 @@
 		<script src="/js/jquery.min.js"></script>
 		<script src="/js/saman.js"></script>
     <script src="/js/website.js"></script>
+    <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
     
     <!-- Hotjar Tracking Code for http://www.samanrashidi.com -->
     <script>
