fixed some issues

--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Saman Rashidi ~ Sr. Front-end Developer</title>
+    <title>Saman Rashidi ~ Front-end Developer</title>
     <meta charset="utf-8">
     <meta name="description" content="Hi, I'm Saman and specialized in Front-end Development. I'm working most of the time with HTML, SASS , Javascript and Vuejs." />
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
@@ -9,13 +9,13 @@
 		<meta name="theme-color" content="#0a9abd" />
     <meta name="samandehi" content="641824005"/>
     <meta property="og:locale" content="en_gb" />
-    <meta property="og:title" content="Saman Rashidi ~ Sr. Front-end Developer" />
+    <meta property="og:title" content="Saman Rashidi ~ Front-end Developer" />
     <meta property="og:description" content="Hi, I'm Saman and specialized in Front-end Development. I'm working most of the time with HTML, SASS , Javascript and Vuejs." />
     <meta property="og:url" content="http://www.samanrashidi.com" />
 		<meta property="og:type" content="website" />
 		<meta property="og:site_name" content="Saman Rashidi" />
     <meta property="og:image" content="http://www.samanrashidi.com/samanrashidi-banner.jpg" />
-    <meta name="twitter:title" content="Saman Rashidi ~ Sr. Front-end Developer" />
+    <meta name="twitter:title" content="Saman Rashidi ~ Front-end Developer" />
     <meta name="twitter:description" content="Hi, I'm Saman and specialized in Front-end Development. I'm working most of the time with HTML, SASS , Javascript and Vuejs." />
     <meta name="twitter:url" content="http://www.samanrashidi.com" />
     <meta property="twitter:image" content="http://www.samanrashidi.com/samanrashidi.png">
