fix: chagned some content and icons

--- a/public/index.html
+++ b/public/index.html
@@ -3,36 +3,36 @@
   <head>
     <title>Saman Rashidi ~ Front-end Developer</title>
     <meta charset="utf-8">
-    <meta name="description" content="Hi, I'm Saman and specialized in Front-end Development. I'm working most of the time with HTML, SASS , Javascript and Vuejs." />
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <meta name="description" content="I'm a developer who enjoys coding, drinking coffee, learning new things and gaming in my free time." />
+    <meta name="viewport" content="width=device-width,initial-scale=1.0" />
     <meta name="author" content="Saman Rashidi" />
 		<meta name="theme-color" content="#0a9abd" />
-    <meta name="samandehi" content="641824005"/>
+    <meta name="samandehi" content="641824005" />
     <meta property="og:locale" content="en_gb" />
     <meta property="og:title" content="Saman Rashidi ~ Front-end Developer" />
-    <meta property="og:description" content="Hi, I'm Saman and specialized in Front-end Development. I'm working most of the time with HTML, SASS , Javascript and Vuejs." />
+    <meta property="og:description" content="I'm a developer who enjoys coding, drinking coffee, learning new things and gaming in my free time." />
     <meta property="og:url" content="http://www.samanrashidi.com" />
 		<meta property="og:type" content="website" />
 		<meta property="og:site_name" content="Saman Rashidi" />
     <meta property="og:image" content="http://www.samanrashidi.com/samanrashidi-banner.jpg" />
     <meta name="twitter:title" content="Saman Rashidi ~ Front-end Developer" />
-    <meta name="twitter:description" content="Hi, I'm Saman and specialized in Front-end Development. I'm working most of the time with HTML, SASS , Javascript and Vuejs." />
+    <meta name="twitter:description" content="I'm a developer who enjoys coding, drinking coffee, learning new things and gaming in my free time." />
     <meta name="twitter:url" content="http://www.samanrashidi.com" />
-    <meta property="twitter:image" content="http://www.samanrashidi.com/samanrashidi.png">
-    <meta property="twitter:card" content="summary_large_image">
+    <meta name="twitter:image" content="http://www.samanrashidi.com/samanrashidi.png" />
+    <meta name="twitter:card" content="summary_large_image" />
 		<link rel="alternate" href="http://www.samanrashidi.com/" hreflang="en-gb" />
     <link rel="icon" type="image/png" href="<%= BASE_URL %>favicon.png" />
     <link rel="manifest" href="manifest.webmanifest" />
     <link rel="apple-touch-icon" href="images/apple-touch-icon.png" />
-    <link rel="apple-touch-icon" sizes="114x114" href="images/apple-touch-icon-iphone.png">
-    <link rel="apple-touch-icon" sizes="144x144" href="images/apple-touch-icon-iphone-retina.png">
-    <link rel="apple-touch-startup-image" href="images/launch-640x1136.png" media="(device-width: 320px) and (device-height: 568px) and (-webkit-device-pixel-ratio: 2) and (orientation: portrait)">
-    <link rel="apple-touch-startup-image" href="images/launch-750x1294.png" media="(device-width: 375px) and (device-height: 667px) and (-webkit-device-pixel-ratio: 2) and (orientation: portrait)">
-    <link rel="apple-touch-startup-image" href="images/launch-1242x2148.png" media="(device-width: 414px) and (device-height: 736px) and (-webkit-device-pixel-ratio: 3) and (orientation: portrait)">
-    <link rel="apple-touch-startup-image" href="images/launch-1125x2436.png" media="(device-width: 375px) and (device-height: 812px) and (-webkit-device-pixel-ratio: 3) and (orientation: portrait)">
-    <link rel="apple-touch-startup-image" href="images/launch-1536x2048.png" media="(min-device-width: 768px) and (max-device-width: 1024px) and (-webkit-min-device-pixel-ratio: 2) and (orientation: portrait)">
-    <link rel="apple-touch-startup-image" href="images/launch-1668x2224.png" media="(min-device-width: 834px) and (max-device-width: 834px) and (-webkit-min-device-pixel-ratio: 2) and (orientation: portrait)">
-    <link rel="apple-touch-startup-image" href="images/launch-2048x2732.png" media="(min-device-width: 1024px) and (max-device-width: 1024px) and (-webkit-min-device-pixel-ratio: 2) and (orientation: portrait)">
+    <link rel="apple-touch-icon" sizes="114x114" href="images/apple-touch-icon-iphone.png" />
+    <link rel="apple-touch-icon" sizes="144x144" href="images/apple-touch-icon-iphone-retina.png" />
+    <link rel="apple-touch-startup-image" href="images/launch-640x1136.png" media="(device-width: 320px) and (device-height: 568px) and (-webkit-device-pixel-ratio: 2) and (orientation: portrait)" />
+    <link rel="apple-touch-startup-image" href="images/launch-750x1294.png" media="(device-width: 375px) and (device-height: 667px) and (-webkit-device-pixel-ratio: 2) and (orientation: portrait)" />
+    <link rel="apple-touch-startup-image" href="images/launch-1242x2148.png" media="(device-width: 414px) and (device-height: 736px) and (-webkit-device-pixel-ratio: 3) and (orientation: portrait)" />
+    <link rel="apple-touch-startup-image" href="images/launch-1125x2436.png" media="(device-width: 375px) and (device-height: 812px) and (-webkit-device-pixel-ratio: 3) and (orientation: portrait)" />
+    <link rel="apple-touch-startup-image" href="images/launch-1536x2048.png" media="(min-device-width: 768px) and (max-device-width: 1024px) and (-webkit-min-device-pixel-ratio: 2) and (orientation: portrait)" />
+    <link rel="apple-touch-startup-image" href="images/launch-1668x2224.png" media="(min-device-width: 834px) and (max-device-width: 834px) and (-webkit-min-device-pixel-ratio: 2) and (orientation: portrait)" />
+    <link rel="apple-touch-startup-image" href="images/launch-2048x2732.png" media="(min-device-width: 1024px) and (max-device-width: 1024px) and (-webkit-min-device-pixel-ratio: 2) and (orientation: portrait)" />
 
 		<!-- Javascript Files
     	================================================== -->
