--- a/public/index.html
+++ b/public/index.html
@@ -11,16 +11,16 @@
     <meta property="og:locale" content="en_gb" />
     <meta property="og:title" content="Saman Rashidi ~ Front-end Developer" />
     <meta property="og:description" content="I'm a developer who enjoys coding, drinking coffee, learning new things and gaming in my free time." />
-    <meta property="og:url" content="http://www.samanrashidi.com" />
+    <meta property="og:url" content="https://www.samanrashidi.com" />
 		<meta property="og:type" content="website" />
 		<meta property="og:site_name" content="Saman Rashidi" />
-    <meta property="og:image" content="http://www.samanrashidi.com/samanrashidi-banner.jpg" />
+    <meta property="og:image" content="https://www.samanrashidi.com/samanrashidi-banner.jpg" />
     <meta name="twitter:title" content="Saman Rashidi ~ Front-end Developer" />
     <meta name="twitter:description" content="I'm a developer who enjoys coding, drinking coffee, learning new things and gaming in my free time." />
-    <meta name="twitter:url" content="http://www.samanrashidi.com" />
-    <meta name="twitter:image" content="http://www.samanrashidi.com/samanrashidi.png" />
+    <meta name="twitter:url" content="https://www.samanrashidi.com" />
+    <meta name="twitter:image" content="https://www.samanrashidi.com/samanrashidi.png" />
     <meta name="twitter:card" content="summary_large_image" />
-		<link rel="alternate" href="http://www.samanrashidi.com/" hreflang="en-gb" />
+		<link rel="alternate" href="https://www.samanrashidi.com/" hreflang="en-gb" />
     <link rel="icon" type="image/png" href="<%= BASE_URL %>favicon.png" />
     <link rel="manifest" href="manifest.webmanifest" />
     <link rel="apple-touch-icon" href="images/apple-touch-icon.png" />
